# ZuStDPipe

./: .gitignore  .project  .travis.yml  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: build.yml
data/import/: doc1.jsonlines
zus-cli/: Cargo.toml
zus-cli/src/: main.rs
zusearch/: Cargo.toml
zusearch/src/: lib.rs
zusearch/src/app/: error.rs  manager.rs  mod.rs
zusearch/src/modules/: interface.rs  manager.rs  mod.rs
zustdp-cli/: Cargo.toml
zustdp-cli/src/: error.rs  main.rs
zustdp-cli/src/run/: run.rs
zustdp-cli/src/validate/: validate.rs
zustdp-modules-common/zustdp-module-process-echo/: Cargo.toml
zustdp-modules-common/zustdp-module-process-echo/src/: echoprocess.rs  lib.rs  wasm.rs
zustdpipe/: Cargo.toml
zustdpipe-modules-library/: Cargo.toml
zustdpipe-modules-library/src/: lib.rs
zustdpipe-modules-library/src/interfaces/: mod.rs
zustdpipe-modules-library/src/interfaces/process/: api.rs  interface.rs
zustdpipe-modules-library/src/interfaces/storage/: api.rs  interface.rs  mod.rs  storage.rs
zustdpipe-modules-library/src/modules/: wasm.rs
zustdpipe/example-apps/example-app-simple/: zustdp-app-simple-example-local.yml
zustdpipe/src/: lib.rs
zustdpipe/src/apps/: error.rs  interface.rs  manager.rs  mod.rs
zustdpipe/src/error/: error.rs
zustdpipe/src/jobs/: interface.rs  manager.rs  mod.rs
zustdpipe/src/modules/: interface.rs  manager.rs  mod.rs
zustdpipe/src/pipeline/: interface.rs  manager.rs  mod.rs
zustdpipe/tests/: mod.rs
zustdpipe/tests/data/pipelines/test-pipeline/: zusearch-app-test.yml
