[package]
name = "zus-cli"
version = "0.1.0"
authors = ["Jörn Franke <jornfranke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.56"}
structopt = {version = "0.3.25"}
zusearch = {path = "../zusearch"}