[package]
name = "zusearch"
version = "0.1.0"
authors = ["Jörn Franke <jornfranke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# libzusearch must be available to a wide range of different frameworks and applications. 
# This can be only guaranteed at the moment through a cdylib
[lib]
crate-type=["cdylib","rlib"]

[dependencies]
arrow = { version = "19.0.0", default-features = false, features = ["ipc"] }
bincode = {version = "1.3.3"}
bloomfilter = {version = "1.0.9"}
flate2 = { version = "1.0.24"}
log4rs = { version = "1.1.1"}
log = { version = "0.4.17", features = ["std"] }
regex = { version = "1.6.0"}
rust_decimal = { version = "1.26.1"}
serde = {version="1.0.142", features = ["derive"] }
serde_yaml = {version = "0.8.26"}
thiserror = {version = "1.0.32"}
time = {version = "0.3.11", features = ["macros"]}
tokio = { version = "1.19.2"}
wasmtime = { version = "0.39.1"}
wasmtime-wasi = { version = "0.39.1"}
