[package]
name = "zusearch"
version = "0.1.0"
authors = ["Jörn Franke <jornfranke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# libzusearch must be available to a wide range of different frameworks and applications. 
# This can be only guaranteed at the moment through a cdylib
[lib]
crate-type=["cdylib","rlib"]

[dependencies]
arrow = { version = "33.0.0", default-features = false, features = ["ipc"] }
bincode = {version = "1.3.3"}
bloomfilter = {version = "1.0.9"}
flate2 = { version = "1.0.25"}
log4rs = { version = "1.2.0"}
log = { version = "0.4.17", features = ["std"] }
regex = { version = "1.7.1"}
rust_decimal = { version = "1.28.0"}
serde = {version="1.0.152", features = ["derive"] }
serde_yaml = {version = "0.9.17"}
thiserror = {version = "1.0.38"}
time = {version = "0.3.17", features = ["macros"]}
tokio = { version = "1.25.0"}
wasmtime = { version = "6.0.1"}
wasmtime-wasi = { version = "6.0.1"}
