[package]
name = "zustdp_module_process_echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
zustdpipe-modules-library = {path = "../../zustdpipe-modules-library"}
arrow = { version = "50.0.0", default-features = false, features = ["ipc"] }

[workspace]